# klines-streamer

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.traefik.yaml  docker-compose.yaml  docker-entrypoint.sh  proxy.Dockerfile  pyproject.toml
examples/: custom_consumer_example.py  proxy_client_example.py  test_websocket_client.py
proxy/: __init__.py  __main__.py  logging.py  message_router.py  settings.py  upstream.py  websocket_server.py
streamer/: __init__.py  __main__.py  aggregator.py  broadcaster.py  logging.py  normalizer.py  settings.py  storage.py  symbols.py  types.py  websocket.py
streamer/bybit/: __init__.py  client.py  models.py
streamer/consumers/: __init__.py  base.py  console.py  file.py  redis.py  validator.py  websocket.py
streamer/core/: __init__.py  aggregator.py  streamer.py
streamer/utils/: __init__.py  logging.py  parse.py  symbols.py
streamer/websockets/: __init__.py  base.py  binance.py  bingx.py  bitget.py  bybit.py  factory.py  gate.py  kucoin.py  okx.py
