[project]
name = "klines-streamer"
version = "0.3.0"
description = "A multi-exchange service that aggregates closed candles (klines) from cryptocurrency exchange trade streams, normalizes them, and delivers to multiple channels (Redis, WebSocket, etc.) via pluggable consumers."
authors = [{ name = "Daniil Pavlovich", email = "layred.dota2@mail.ru" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "redis (>=4.5.0,<6.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "yarl (>=1.22.0,<2.0.0)"
]

[tool.poetry]
include = ["LICENSE"]
homepage = "https://github.com/vispar-tech/klines-streamer"
repository = "https://github.com/vispar-tech/klines-streamer"
packages = [
    { include = "streamer" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.8"
mypy = "^1.19.0"
pre-commit = "^4.5.0"

[tool.poetry.group.proxy.dependencies]
websockets = "^15.0.1"
orjson = "^3.11.5"
pydantic-settings = "^2.12.0"
pydantic = "^2.12.5"
aiofiles = "^25.1.0"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
pretty = true
show_error_codes = true
implicit_reexport = false
warn_unused_ignores = true
warn_return_any = true
namespace_packages = true
files = ["streamer", "proxy"]

[tool.ruff]
include = ["streamer/**/*.py", "proxy/**/*.py"]
line-length = 88
fix = true
unsafe-fixes = true
exclude = ["debug"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "ANN",
    "S",
    "B",
    "C",
    "ISC",
    "PIE",
    "T",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "PTH",
    "ERA",
    "PLR",
    "RUF"

]
ignore = [
    "ANN401", # Need cause we work with dictionaries
]
fixable = ["ALL"]
unfixable = []
pydocstyle = { convention = "pep257", ignore-decorators = ["typing.overload"] }
isort = { force-single-line = false, known-first-party = ["streamer", "proxy"] }
pylint = { allow-magic-value-types = ["int", "str", "float", "bytes"], max-args = 7 }
mccabe = {max-complexity = 14}

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    "T201",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
